# micropython-driver-ahtx0

./: .gitignore  README.md  main.py  micropython-driver-ahtx0.code-workspace  pyproject.toml
lib/ahtx0/: __init__.py  aht10.py
