[project]
name = "micropython-driver-ahtx0"
version = "0.1.0"
description = "MicroPython driver for AHT10, AHT20 and AHT30 sensors over I2C"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
lint.ignore = ["F401"] # Ignore unused imports

[tool.mypy]
mypy_path = ".venv/Lib/site-packages"
custom_typeshed_dir = ".venv/Lib/site-packages"
strict = true

[dependency-groups]
dev = ["micropython-rp2-pico-stubs", "mypy"]
